--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
     <ul>
         <li><a href = "./recipes/cauliflower_soup.html">Cauliflower Blue Cheese Soup</a><li>
-        <li><a href = "./recipes/fishnchips"> Australian Fish & Chips (with Flathead)</a><li>
+        <li><a href = "./recipes/fishnchips.html"> Australian Fish & Chips (with Flathead)</a><li>
         <!-- <li><a href = "./recipes/lentil_tabuli">Lentil Tabuli</a><li>  -->
         <!-- <li><a href = "./recipes/brocolli_sausage_pasta">Brocolli & Pork Sausage Pasta</a><li> -->
         <!-- <li><a href = "./recipes/pork_adobo">Pork Adobo</a><li> -->
