--- a/recipes/fishnchips.html
+++ b/recipes/fishnchips.html
@@ -24,7 +24,10 @@
     </ul> 
     <h3>Instructions</h3>
     <ol>
-        <li>There is no easier fish to fillet than flathead - I will spare you the details but it's so easy </li>
+        <li>There is no easier fish to fillet than flathead - basically knife under the fins, along the spine and skin off.. Should look like this  
+            <br>
+            <img src = "../img/fillets.png">
+        </li>
         <li>Put those chips straight in the oven - make sure you follow the directions </li>
         <li>Lightly flour those fillets so they evenly coated </li>
         <li>Get that oil hot and listen to that sizzle when the fish hits the pan </li>
