--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css" />
     <title>Simple Recipes | Lachlan's Kitchen</title>
 </head>
 <body>
@@ -11,11 +12,11 @@
     <img src = "./img/cookingshow.png" alt = "Lachlan cooking">
     <br>
     <p>Hi i'm Lachlan and have lived in Sydney, Australia my whole life.. <strong>love cooking</strong></p>
-    <p>Growing up in Sydney I always appreciated Middle Eastern & Asian style Food and of course French and Italian style cooking</p>
-    <p>There is also alot of influence from traditional traditional British/Australian style food - We all love a good pie or fish and chips! </p>
+    <p>Growing up in Sydney, I always appreciated Middle Eastern & Asian cuisine and of course French and Italian style cooking</p>
+    <p>There is also a lot of influence from traditional British/Australian style food. We all love a good pie or fish and chips! </p>
     <br>
     <h2>Excited to share the food I love to make with you!</h2>
-    
+    <div class = "container" id="">
     <ul>
         <li><a href = "./recipes/cauliflower_soup.html">Cauliflower Blue Cheese Soup</a></li>
         <br>
