--- a/recipes/cauliflower_soup.html
+++ b/recipes/cauliflower_soup.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Tektur&display=swap" rel="stylesheet">
     <title>Cauliflower Blue Cheese Soup</title>
 </head>
 <body>
@@ -19,24 +23,25 @@
     <h3>Ingredients</h3>
     <ul>
         <li>1 large leek (or 1 white onion) - cut into small pieces</li>
-        <li>[OPTIONAL] Small chunk of 'Speck' (or bacon) cut into lardons/small cubes </li>
-        <li>Butter </li>
-        <li>1 half cauliflower </li>
-        <li>Chicken Stock </li>
+        <li>[OPTIONAL] Small chunk of speck (or bacon) diced </li>
+        <li>Knob of butter </li>
+        <li>Half a head of cauliflower </li>
+        <li>Chicken stock </li>
         <li>Milk </li>
-        <li>Cooking Cream </li>
+        <li>Cooking cream </li>
         <li>Small portion of blue cheese </li>
         <li>Olive oil (for cooking + finishing) </li>
-        <li>Parsley (for finishing) </li>
-        <li>Rustic bread to serve with </li>
+        <li>Parsley (for garnish) </li>
+        <li>Rustic bread (to serve with) </li>
     </ul>>
     <h3>Instructions</h3>
     <ol>
-        <li>Cut up cauliflower into large pieces and put into a large baking dish at a high heat with olive oil + salt</li>
-        <li>In a large pot - render down speck/lardons (or bacon) until crispy + fat renders</li>
-        <li>Add the leek to the pot with some butter and sweat down on a reduced heat</li>
-        <li>Add chicken stock when this starts to dry out - scrape the fond from the bottom</li>
-        <li>After 20-25mins the cauliflower should be starting to char, depending on your oven - this is key part of developing the flavour</li>
+        <li>Preheat your oven to 200*C / 392*F</li>
+        <li>Cut up cauliflower into large pieces and put into a large baking dish.</li> 
+        <li>Season cauliflower with olive oil + salt and roast for 20-25 mins in oven till chared </li>
+        <li>In a large pot, render down speck (bacon) until crispy + fat renders</li>
+        <li>Add the leek to the pot with some butter and sweat on a reduced heat</li>
+        <li>Add chicken stock when this starts to dry out and scrape the fond from the bottom</li>
         <li>Add the roasted cauliflower + milk + blue cheese to the pot - slightly submerging the cauliflower + cheese </li>
         <li>Give the cheese time to melt in the boiling liquid and the cauliflower to fall apart </li>
         <li>When the cheese + milk form a homogenous mixture use an immersion blender to blitz the cauliflower/leek/pork </li>
