--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Tektur&display=swap" rel="stylesheet">
     <title>Simple Recipes | Lachlan's Kitchen</title>
 </head>
 <body>
@@ -15,8 +18,10 @@
     <p>Growing up in Sydney, I always appreciated Middle Eastern & Asian cuisine and of course French and Italian style cooking</p>
     <p>There is also a lot of influence from traditional British/Australian style food. We all love a good pie or fish and chips! </p>
     <br>
-    <h2>Excited to share the food I love to make with you!</h2>
-    <div class = "container" id="">
+    
+    <div class = "container" id="container">
+        <div class = "recipe-links" id ="recipe-links">
+            <h2>Excited to share the food I love to make with you!</h2>
     <ul>
         <li><a href = "./recipes/cauliflower_soup.html">Cauliflower Blue Cheese Soup</a></li>
         <br>
@@ -24,6 +29,8 @@
         <br>
         <li><a href = "./recipes/lentil_tabuli.html">Lentil Tabuli</a></li>
     </ul>
+        </div>>
+    </div>>
 <br>
 <br>
 </body>
