--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
     <title>Simple Recipes | Lachlan's Kitchen</title>
 </head>
 <body>
-    <h1>Simple Recipes - Lachlan's Kitchen</h1>
-    <br>
-    <img src = "./img/cookingshow.png" alt = "Lachlan cooking">
-    <br>
-    <p>Hi i'm Lachlan and have lived in Sydney, Australia my whole life.. <strong>love cooking</strong></p>
-    <p>Growing up in Sydney, I always appreciated Middle Eastern & Asian cuisine and of course French and Italian style cooking</p>
-    <p>There is also a lot of influence from traditional British/Australian style food. We all love a good pie or fish and chips! </p>
-    <br>
-    
+    <div class="bio-box" id="bio-box">
+        <h1>Simple Recipes - Lachlan's Kitchen</h1>
+        <br>
+        <img src = "./img/cookingshow.png" alt = "Lachlan cooking">
+        <br>
+        <p>Hi i'm Lachlan and <strong>I love cooking</strong></p>
+        <p>Growing up in Sydney, Australia I always appreciated Middle Eastern & Asian cuisine and of course French and Italian style cooking</p>
+        <p>There is also a lot of influence from traditional British/Australian style food. We all love a good pie or fish and chips! </p>
+        <br>
+    </div>
     <div class = "container" id="container">
         <div class = "recipe-links" id ="recipe-links">
             <h2>Excited to share the food I love to make with you!</h2>
@@ -29,9 +30,10 @@
         <br>
         <li><a href = "./recipes/lentil_tabuli.html">Lentil Tabuli</a></li>
     </ul>
-        </div>>
-    </div>>
-<br>
-<br>
+    <br>
+    <br>
+        </div>
+    </div>
+
 </body>
 </html>
